tests/Fase2-Semantic/error/t29-break_ouside_loop.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        integer a;
        a = x+b;
        break;
        return a;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
